--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -83,7 +83,8 @@
           </button>
         </div>
   
-        <div class="description">          
+        <div class="about-product">
+          <h3>About this item:</h3>          
           <p [innerHTML]="product.productDesc"></p>
         </div>
       </div>
