--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -277,7 +277,12 @@
         }
       }
 
-      .description {         
+      .about-product {         
+        h3 {
+          margin-bottom: 1rem;
+          color: #4c4e5a;
+        }
+
         p {
           color: #6a6c77;
           line-height: 1.7rem;
