--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -45,6 +45,7 @@
     display: flex;
     width: 100%;
     height: auto;
+    padding: 1rem 0;
     background-color: #fff;
     overflow: hidden;
 
@@ -64,9 +65,6 @@
       .preview {
         width: 100%;
         height: 600px;
-        // padding: 0.2rem;
-        // border: 1px solid #e7edff;
-        // border-radius: 4px;
         overflow: hidden;
         cursor: zoom-in;
       }
@@ -290,4 +288,8 @@
       }
     }
   }
+}
+
+@media (max-width: 768px) {
+
 }
