--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -20,7 +20,8 @@
         <div class="thumbnail-wrapper">
           <button 
             (click)="onNavBtnClick('before')"
-            #navButton class="nav-btns nav-left" disabled>
+            #navButton class="nav-btns nav-left" 
+            disabled>
             <i class="material-icons">arrow_left</i>
           </button>
   
