--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -123,8 +123,7 @@
       padding: 1.5rem 0;
       
       &:not(:last-of-type) {
-        // border-bottom: thin solid rgba(248, 96, 129, 0.815);
-        margin-bottom: 1rem;
+        border-bottom: thin solid #e7edff;
       }
 
       .product-image {
@@ -159,7 +158,7 @@
         .price {
           margin-bottom: 0.5rem;
           color: #333;
-          font-size: 1rem;
+          // font-size: 1rem;
           font-weight: 600;
         }
 
