--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -62,11 +62,15 @@
         object-position: center center;
       }
 
-      .preview {
+      .preview-l {
         width: 100%;
         height: 600px;
         overflow: hidden;
         cursor: zoom-in;
+      }
+
+      .preview-s {
+        display: none;
       }
 
       .thumbnail-wrapper {        
@@ -292,6 +296,9 @@
 
 @media (max-width: 768px) {
   .product-detail-section {
+    .banner {
+      display: none;
+    }
 
     .details-container {
       padding: 0;
@@ -300,176 +307,87 @@
       .product-images {
         width: 100%;
 
-        .preview {
-          height: 350px;
+        .preview-l {
+          display: none;
+        }
+
+        .preview-s {
+          display: flex;
+          width: 100%;
+          height: 350px;          
+          border-radius: 4px;
+          overflow: hidden;
+          overflow-x: auto;
+          scrollbar-width: none;
+          -ms-overflow-style: none;
+          scroll-behavior: smooth;
+          scroll-snap-type: x mandatory;
+
+          &::-webkit-scrollbar {
+            display: none;
+          }
+
+          .slide {          
+            flex-shrink: 0;
+            width: 100%;
+            height: inherit;    
+            scroll-snap-align: center;
+
+            &:not(:last-of-type) {
+              margin-right: 1.5rem;
+            }
+          }        
+        }
+
+        .indicator-wrapper {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          margin-top: 0.7rem;
+          overflow: hidden;
+
+          .indicator {
+            display: block;
+            width: 8px;
+            height: 8px;
+            border: 2px solid transparent;
+            border-radius: 15px;
+            background-color: #d4d8e4;
+            transition: background-color 0.4s ease,
+            border-color 0.4s ease;
+
+            &:not(:last-of-type) {
+              margin-right: 0.2rem;
+            }
+
+            &.active {
+              border-color: rgba(248, 96, 129, 0.815);
+              background-color: transparent;
+            }
+          }
         }
 
         .thumbnail-wrapper {        
-
-          .nav-btns {
-            display: none;
-          }
-  
-          .indicator-wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            margin: 0.7rem;
-            overflow: hidden;
-  
-            .indicator {
-              display: block;
-              width: 8px;
-              height: 8px;
-              border: 2px solid transparent;
-              border-radius: 15px;
-              background-color: #d4d8e4;
-              transition: background-color 0.4s ease,
-              border-color 0.4s ease;
-  
-              &:not(:last-of-type) {
-                margin-right: 0.2rem;
-              }
-  
-              &.active {
-                border-color: rgba(248, 96, 129, 0.815);
-                background-color: transparent;
-              }
-            }
-          }
-        }
-
-        .thumbnail-list {  
-          .thumbnail {          
-            width: 100px;
-            height: 80px;        
-            margin-right: 0.3rem;
-
-            &.active {
-              position: relative;
-              border-color: rgba(248, 96, 129, 0.815);
-            
-              &::after {              
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-color: rgba(255, 255, 255, 0.4);
-              }
-            }
-          }           
+          display: none;  
         }
       }
 
-  
       .product-information {
         width: 100%;
         height: auto;
   
-        .content {
-          width: 100%;
-          height: auto;
-          margin-bottom: 1.5rem;
-  
-          .product-name, 
-          .brand, 
-          .price, 
-          .stock-label {
-            margin-bottom: 1rem;
-            color: #4c4e5a;
-          }
-  
-          .product-name {
-            color: #4c4e5a;
-            font-size: 1.2rem;
-            line-height: 1.5rem;
-          }
-    
-          .brand {
-            span {
-              color: #2587f7;
-            }
-          }
-    
-          .price {
-            font-size: 1rem;
-  
-            strong {
-              color: #4c4e5a;
-            }
-          }
-    
-          .stock-label {
-            color: #4da861;
-            
-            &.not-in-stock {
-              color: #ce8220;
-            }
-          }         
-  
-          .unavailable-message {
-            color: #963249;
-            font-weight: 500;
-          }
-        }
-  
-        .action-buttons {
-          display: flex;
-          align-items: center;
-          width: 100%;
-          margin-bottom: 2rem;
-  
+        .action-buttons {  
           button {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: calc(50% - 0.5rem);
-            height: 36px;          
-            color: #4c4e5a;
-            border-radius: 4px;
-            border: 1px solid #F72551; 
-            transition: background-color .4s ease;
-            overflow: hidden;         
-          }
-  
-          .buy-now-btn {
-            margin-right: 1rem;
-            color: #fff;
-            background-color: #F72551;
-  
-            &:hover {
-              background-color: darken(#F72551, 5); 
-            }
-          }
-  
-          .add-to-cart-btn {        
-            background-color: #fff;  
-  
-            .material-icons {
-              margin-right: 0.5rem;
-              color: #4c4e5a;
-              font-size: 1.3rem;
-            }
-  
-            &:hover {
-              background-color: #f6f8ff; 
-            }
+            width: calc(50% - 0.5rem);       
           }
         }
   
-        .about-product {         
-          h3 {
-            margin-bottom: 1rem;
-            color: #4c4e5a;
-          }
-  
+        .about-product {           
           p {
             color: #6a6c77;
-            line-height: 1.7rem;
+            font-size: .85rem;
+            line-height: 1.4rem;
           }
         }
       }
