--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -3,20 +3,20 @@
     <h3>Color:</h3>
 
     <div class="option-flex">
-      <div class="option-icon-l selected">
+      <button class="option-icon-l selected">
         <img src="https://images-na.ssl-images-amazon.com/images/I/4193vZldXVL._SS36_.jpg">
         <span>White</span>
-      </div>
+      </button>
 
-      <div class="option-icon-l">
+      <button class="option-icon-l">
         <img src="https://images-na.ssl-images-amazon.com/images/I/41VdOpdCX4L._SS36_.jpg">
         <span>Black</span>
-      </div>
+      </button>
 
-      <div class="option-icon-l">
+      <button class="option-icon-l">
         <img src="https://images-na.ssl-images-amazon.com/images/I/419PMmp5u8L._SS36_.jpg">
         <span>Black/Red</span>
-      </div>
+      </button>
     </div>
   </section>
 
