--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -313,9 +313,10 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 40px;
+        height: 36px;
         color: #fff;
-        border: 2px solid #F72551;
+        border: 1px solid #F72551;
+        border-radius: 4px;
         background-color: #F72551;
       }
     }
