--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -4,6 +4,7 @@
 
   .variant-option {
     width: 100%;
+    overflow: hidden;
 
     &:not(:last-of-type) {
       margin-bottom: 1.5rem;
@@ -16,7 +17,7 @@
 
     .option-flex {
       display: flex;
-      flex-wrap: nowrap;
+      flex-wrap: wrap;
       user-select: none;
 
       .option-icon {
@@ -25,7 +26,9 @@
         align-items: center;
         min-width: 80px;
         height: 36px;
+        margin-bottom: 0.5rem;
         padding: 0.2rem 0.7rem;
+        white-space: nowrap;
         border: 1px solid #e7edff;
         border-radius: 5px;
         transition: border-color .4s ease, 
