--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -31,7 +31,6 @@
     align-items: center;
     width: 100%;
     height: 4rem;
-    font-size: 1rem;
     font-weight: 400;
     background-color: #fff;
 
@@ -108,7 +107,8 @@
     }
     
     .material-icons {
-      color: #555;
+      color: #4c4e5a;
+      font-size: 1.3rem;
     }
 
     input {
