--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -17,6 +17,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      padding: 1.5rem;
       background-color: #fff;
       box-shadow: 0 0 25px rgba(190, 190, 190, 0.2);
       overflow: hidden;
@@ -25,7 +26,6 @@
         display: block;
         width: 100%;
         height: 250px;
-        padding: 1rem;
         background-color: #fff;
 
         img {
@@ -41,7 +41,7 @@
         justify-content: space-between;
         width: 100%;
         height: 100%;
-        padding: 1.5rem;
+        margin-top: 1.5rem;
         background-color: #fff;
         overflow: hidden;
 
@@ -77,8 +77,8 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 100%;
-        padding: 1.5rem;
+        width: 100%;        
+        margin-top: 1.5rem;
 
         .buy-now-btn {
           position: relative;
@@ -103,12 +103,13 @@
         .add-to-cart-btn {
           .material-icons {
             color: #F72551;
-            transition: color .3s ease;
+            font-size: 1.4rem;
+            transition: color .4s ease;
           }
 
           &:hover {
             .material-icons {
-              color: #333;
+              color: darken(#F72551, 5);
             }
           }
         }
