--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -2,11 +2,7 @@
 
 <section *ngIf="!isLoading" class="product-detail-section">
   <div class="wrapper">
-    <div class="banner">
-      <div class="banner-text">
-        <h3>New savings of up to 50% on Armazon Choice products</h3>
-      </div>
-    </div>
+    <div class="banner"></div>
 
     <div class="details-container">
       <div class="product-images">
