--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -28,10 +28,7 @@
   }  
 
   .banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url('../../assets/img/banner-3.webp') center center/cover;
+    background: url('../../assets/img/banner-3.jpg') center center/cover;
 
     h3 {
       color: #222;
