--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -82,7 +82,7 @@
             </div>
           </div>     
            
-          <variant-section></variant-section>
+          <variant-section [variants]="variants"></variant-section>
         </div>
   
         <div class="action-buttons">
