--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -1,5 +1,6 @@
 .variant-wrapper {  
   width: 100%;
+  margin: 3rem 0;
   height: auto;
 
   .variant-option {
@@ -7,7 +8,7 @@
     overflow: hidden;
 
     &:not(:last-of-type) {
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
     }
     
     h3 {
@@ -21,6 +22,7 @@
       user-select: none;
 
       .option-icon {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -34,25 +36,31 @@
         transition: border-color .4s ease, 
         background-color .4s ease;
         cursor: pointer;
+        overflow: hidden;
 
         &:not(:last-of-type) {
           margin-right: 0.5rem;
         }
 
-        &:not(.selected):hover {
-          background-color: #f6f8ff; 
-        }
-
-        &.selected {
-          border-color: rgba(248, 96, 129, 0.815);
-        }
-
-        img {
+        &:not(.selected)::after {
+          content: '';
+          opacity: 0;
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 100%;
           height: 100%;
-          margin-right: 0.5rem;
-          object-fit: contain;
+          background-color: rgba(204, 207, 216, 0.2); 
+          transition: opacity .4s ease;
         }
+
+        &:hover::after {
+          opacity: 1;
+        }
+
+        // &.selected {
+        //   border-color: rgba(248, 96, 129, 0.815);
+        // }
 
         span {
           color: #4c4e5a;
@@ -62,82 +70,20 @@
 
         &-l {
           @extend .option-icon;
-          height: 60px;
+          flex-direction: column;
+          height: auto;
+          padding: 1rem 0.7rem;
+          border: 1px solid transparent;
+
+          img {
+            width: 80px;
+            height: 100%;
+            margin-right: 0.5rem;
+            object-fit: contain;
+          }
+          
         }
       }
     }
   }
 }
-
-// @media (max-width: 768px) {
-//   .variant-wrapper {  
-//     width: 100%;
-//     height: auto;
-  
-//     .variant-option {
-//       width: 100%;
-//       overflow: hidden;
-  
-//       &:not(:last-of-type) {
-//         margin-bottom: 1.5rem;
-//       }
-      
-//       h3 {
-//         margin-bottom: 1rem;
-//         color: #4c4e5a;
-//       }
-  
-//       .option-flex {
-//         display: flex;
-//         flex-wrap: wrap;
-//         user-select: none;
-  
-//         .option-icon {
-//           display: flex;
-//           justify-content: center;
-//           align-items: center;
-//           min-width: 80px;
-//           height: 36px;
-//           margin-bottom: 0.5rem;
-//           padding: 0.2rem 0.7rem;
-//           white-space: nowrap;
-//           border: 1px solid #e7edff;
-//           border-radius: 5px;
-//           transition: border-color .4s ease, 
-//           background-color .4s ease;
-//           cursor: pointer;
-  
-//           &:not(:last-of-type) {
-//             margin-right: 0.5rem;
-//           }
-  
-//           &:not(.selected):hover {
-//             background-color: #f6f8ff; 
-//           }
-  
-//           &.selected {
-//             border-color: rgba(248, 96, 129, 0.815);
-//           }
-  
-//           img {
-//             width: 100%;
-//             height: 100%;
-//             margin-right: 0.5rem;
-//             object-fit: contain;
-//           }
-  
-//           span {
-//             color: #4c4e5a;
-//             font-size: .8rem;
-//             font-weight: bold;
-//           }
-  
-//           &-l {
-//             @extend .option-icon;
-//             height: 40px;
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
