--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -33,16 +33,18 @@
         white-space: nowrap;
         border: 1px solid #e7edff;
         border-radius: 5px;
-        transition: border-color .4s ease, 
+        transition: border-color .4s ease,
+        opacity .4s ease, 
         background-color .4s ease;
         cursor: pointer;
         overflow: hidden;
+        opacity: 0.5;
 
         &:not(:last-of-type) {
           margin-right: 0.5rem;
         }
 
-        &:not(.selected)::after {
+        &:not(.active)::after {
           content: '';
           opacity: 0;
           position: absolute;
@@ -58,9 +60,10 @@
           opacity: 1;
         }
 
-        // &.selected {
-        //   border-color: rgba(248, 96, 129, 0.815);
-        // }
+        &.active {
+          // border-color: rgba(248, 96, 129, 0.815);
+          opacity: 1;
+        }
 
         span {
           color: #4c4e5a;
