--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -3,7 +3,8 @@
     <h3>Color:</h3>
 
     <div class="option-flex">
-      <button 
+      <button         
+        (click)="onChange(variant.variantId)"
         *ngFor="let variant of colorVariants;"
         class="option-icon-l"
         [class.active]="activeVariant == variant.variantId">
