--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -19,6 +19,9 @@
     .option-flex {
       display: flex;
       flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 0.5rem;
       user-select: none;
 
       .option-icon {
@@ -41,7 +44,7 @@
         opacity: 0.5;
 
         &:not(:last-of-type) {
-          margin-right: 0.5rem;
+          // margin-right: 0.5rem;
         }
 
         &:not(.active)::after {
@@ -80,11 +83,47 @@
 
           img {
             width: 80px;
-            height: 100%;
-            margin-right: 0.5rem;
+            height: 90px;
+            margin-bottom: 0.5rem;
             object-fit: contain;
           }
           
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .variant-wrapper {  
+    width: 100%;
+    margin: 3rem 0;
+    height: auto;
+  
+    .variant-option {
+      width: 100%;
+      overflow: hidden;
+  
+      &:not(:last-of-type) {
+        margin-bottom: 2rem;
+      }
+      
+      h3 {
+        margin-bottom: 1rem;
+        color: #4c4e5a;
+      }
+  
+      .option-flex {
+        display: flex;
+        flex-wrap: wrap;
+        user-select: none;
+  
+        .option-icon {
+          width: calc(50% - 0.5rem);
+  
+          &-l {
+            width: calc(50% - 0.5rem);
+          }
         }
       }
     }
