--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -25,6 +25,28 @@
     </button>
   </section>
 
+  <!--  -->
+  <section class="variant-option size">
+    <h3>Size:</h3>
+
+    <button class="option-icon">
+      <span>Small</span>
+    </button>
+
+    <button class="option-icon">
+      <span>Medium</span>
+    </button>
+
+    <button class="option-icon">
+      <span>Large</span>
+    </button>
+
+    <button class="option-icon">
+      <span>X-Large</span>
+    </button>
+  </section>
+  <!--  -->
+
   <section *ngIf="styleVariants?.length" class="variant-option style">
     <h3>Style:</h3>
 
