--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -17,14 +17,13 @@
     }
 
     .option-flex {
-      display: flex;
-      flex-wrap: wrap;
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       gap: 0.5rem;
       user-select: none;
 
       .option-icon {
+        opacity: 0.5;
         position: relative;
         display: flex;
         justify-content: center;
@@ -40,11 +39,10 @@
         opacity .4s ease, 
         background-color .4s ease;
         cursor: pointer;
-        overflow: hidden;
-        opacity: 0.5;
+        overflow: hidden;        
 
-        &:not(:last-of-type) {
-          // margin-right: 0.5rem;
+        &.active {
+          opacity: 1;
         }
 
         &:not(.active)::after {
@@ -55,16 +53,11 @@
           left: 0;
           width: 100%;
           height: 100%;
-          background-color: rgba(204, 207, 216, 0.2); 
+          background-color: rgba(204, 207, 216, 0.5); 
           transition: opacity .4s ease;
         }
 
         &:hover::after {
-          opacity: 1;
-        }
-
-        &.active {
-          // border-color: rgba(248, 96, 129, 0.815);
           opacity: 1;
         }
 
@@ -83,8 +76,8 @@
 
           img {
             width: 80px;
-            height: 90px;
-            margin-bottom: 0.5rem;
+            height: 80px;
+            margin-bottom: 1rem;
             object-fit: contain;
           }
           
