--- a/src/app/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product-details/variant-section/variant-section.component.scss
@@ -34,7 +34,7 @@
         padding: 0.2rem 0.7rem;
         white-space: nowrap;
         border: 1px solid #e7edff;
-        border-radius: 5px;
+        border-radius: 4px;
         transition: border-color .4s ease,
         opacity .4s ease, 
         background-color .4s ease;
@@ -71,8 +71,8 @@
           @extend .option-icon;
           flex-direction: column;
           height: auto;
-          padding: 1rem 0.7rem;
-          border: 1px solid transparent;
+          padding: 1rem 0;
+          border: none;
 
           img {
             width: 80px;
