--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,31 +1,31 @@
 <app-spinner [loading]="isLoading" overlayStyle="fixed"></app-spinner>
 
-<section *ngIf="!isLoading" class="product-detail-section">
+<section  class="product-detail-section">
   <div class="wrapper">
     <div class="banner"></div>
 
-    <div class="details-container">
-      <div class="product-images">
+    <div [style.display]="isLoading ? 'none' : 'flex'" class="details-container">
+      <div class="product-images" [class.reloading]="reolading">
         <!-- Large screen -->
         <div class="preview-l">
           <img 
             image-loader
-            [src]="product.images[activePreview]" 
-            [alt]="product.productName"
+            [src]="product?.images[activePreview]" 
+            [alt]="product?.productName"
             draggable="false">
         </div>
 
         <!-- Small Screen -->
         <div class="preview-s-wrapper">
           <ul (scroll)="onPreviewScroll($event.target)" class="preview-s">
-            <li *ngFor="let image of product.images;" class="slide">
-              <img image-loader [src]="image" [alt]="product.productName">
+            <li *ngFor="let image of product?.images;" class="slide">
+              <img image-loader [src]="image" [alt]="product?.productName">
             </li>
           </ul>
   
           <div class="indicator-wrapper">
             <span 
-              *ngFor="let i of product.images; index as index" 
+              *ngFor="let i of product?.images; index as index" 
               class="indicator"
               [class.active]="activePreview == index"></span>
           </div>
@@ -43,14 +43,14 @@
             <li 
               (mouseover)="activePreview = index"
               (click)="activePreview = index"
-              *ngFor="let thumbnail of product.images; index as index" 
+              *ngFor="let thumbnail of product?.images; index as index" 
               class="thumbnail"
               [class.active]="activePreview == index">
 
               <img 
                 image-loader
                 [src]="thumbnail" 
-                [alt]="product.productName"
+                [alt]="product?.productName"
                 draggable="false">
             </li>
           </ul>
@@ -65,25 +65,27 @@
   
       <div class="product-information">  
         <div class="content">
-          <h3 class="product-name">{{ product.productName }}</h3>
-          <p class="brand">By: <span>{{ product.brand }}</span></p> 
-          <p class="price">
-            Price: <strong>{{ product.price | currency }}</strong>
-          </p>
+          <div [class.reloading]="reolading">
+            <h3 class="product-name">{{ product?.productName }}</h3>
+            <p class="brand">By: <span>{{ product?.brand }}</span></p> 
+            <p class="price">
+              Price: <strong>{{ product?.price | currency }}</strong>
+            </p>
 
-          <div [ngSwitch]="product.available">
-            <div *ngSwitchCase="false">
-              <p class="unavailable-message">Currently unavailable</p>
-            </div>
-            <div *ngSwitchDefault>
-              <p 
-                class="stock-label"
-                [class.not-in-stock]="!product.totalStock">
-                {{ product.totalStock > 0 ? 'In stock' : 'Not in stock' }}
-              </p>   
-            </div>
-          </div>     
-           
+            <div [ngSwitch]="product?.available" >
+              <div *ngSwitchCase="false">
+                <p class="unavailable-message">Currently unavailable</p>
+              </div>
+              <div *ngSwitchDefault>
+                <p 
+                  class="stock-label"
+                  [class.not-in-stock]="!product?.totalStock">
+                  {{ product?.totalStock > 0 ? 'In stock' : 'Not in stock' }}
+                </p>   
+              </div>
+            </div>    
+          </div>
+
           <variant-section 
             [variants]="variants"
             (variantId)="updateProductInfo($event)"></variant-section>
@@ -91,20 +93,20 @@
   
         <div class="action-buttons">
           <button 
-            (click)="onBuyNow(product.productId)"
+            (click)="onBuyNow(product?.productId)"
             type="button" class="buy-now-btn">Buy Now</button>
   
           <button 
-            (click)="onAddToCart(product.productId)"
+            (click)="onAddToCart(product?.productId)"
             type="button" class="add-to-cart-btn">
             <i class="material-icons">add_shopping_cart</i>
             <span>Add to cart</span>
           </button>
         </div>
   
-        <div class="about-product">
+        <div class="about-product" [class.reloading]="reolading">
           <h3>About this item:</h3>          
-          <p [innerHTML]="product.productDesc"></p>
+          <p [innerHTML]="product?.productDesc"></p>
         </div>
       </div>
     </div>
