--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -41,7 +41,7 @@
   </section>
 
   <section *ngIf="modelVariants?.length" class="variant-option model">
-    <h3>Style:</h3>
+    <h3>Model:</h3>
 
     <div class="option-flex">
       <button 
@@ -54,7 +54,7 @@
   </section>
 
   <section *ngIf="configurationVariants?.length" class="variant-option configuration">
-    <h3>Style:</h3>
+    <h3>Configuration:</h3>
 
     <div class="option-flex">
       <button 
@@ -67,7 +67,7 @@
   </section>
 
   <section *ngIf="capacityVariants?.length" class="variant-option configuration">
-    <h3>Style:</h3>
+    <h3>Capacity:</h3>
 
     <div class="option-flex">
       <button 
