--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -71,6 +71,7 @@
 
     <div class="option-flex">
       <button 
+        (click)="onChange(variant.variantId)"
         *ngFor="let variant of capacityVariants;"
         class="option-icon"
         [class.active]="activeVariant">
