--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -43,10 +43,41 @@
         <label>Total in stock</label>
         <input formControlName="totalStock" type="number" min="1">
       </div>
+
+      <div class="form-group-2">
+        <input 
+          (change)="isVariant = !isVariant" 
+          type="checkbox" id="variant">
+        <label for="variant">Mark as product variant</label>
+      </div>
+
+      <div
+        *ngIf="isVariant == true" 
+        formArrayName="variantInfo"
+        class="variant-fields"> 
+        <div [formGroupName]="0" class="">
+          <div class="form-group">
+            <label>Original product ID</label>
+            <input formControlName="originalProductId" type="number">
+          </div>
+          
+          <div class="form-group">
+            <label>Option ID</label>
+            <input formControlName="optionId" type="number">
+          </div>
+  
+          <div class="form-group">
+            <label>Option Value</label>
+            <input formControlName="optionValue">
+          </div>
+        </div>
+      </div>
+
+
   
       <div class="form-group">
         <button 
-          [disabled]="productForm.invalid" 
+          
           class="add-btn add-btn-1"
           type="submit">Add to inventory</button>
       </div>
