--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -5,7 +5,7 @@
     position: relative;
     display: flex;
     width: 100%;
-    height: 642px;
+    min-height: 642px;
     font-size: 0.85rem;
     background-color: #fff;
     overflow: hidden;
@@ -86,6 +86,21 @@
         textarea {
           resize: none;
         }
+      }
+
+      .form-group-2 {
+        display: flex;
+        align-items: center;
+        margin: 1.5rem 0;
+
+        input {
+          margin-right: 0.5rem;
+        }
+      }
+
+      .variant-fields {
+        width: 100%;
+        margin-bottom: 1rem;
       }
     }
 
