--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -101,6 +101,7 @@
       .variant-fields {
         width: 100%;
         margin-bottom: 1rem;
+        animation: reveal .5s ease;
       }
     }
 
