--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -52,7 +52,7 @@
       </div>
 
       <div
-        *ngIf="!isVariant" 
+        *ngIf="isVariant" 
         formArrayName="variantInfo"
         class="variant-fields"> 
         <div [formGroupName]="0" class="">
