--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -52,13 +52,28 @@
       </div>
 
       <div
-        *ngIf="isVariant" 
+        *ngIf="!isVariant" 
         formArrayName="variantInfo"
         class="variant-fields"> 
         <div [formGroupName]="0" class="">
           <div class="form-group">
             <label>Original product ID</label>
-            <input formControlName="originalProductId" type="number">
+            
+            <div class="input-wrapper">
+              <input formControlName="originalProductId" type="number">
+            
+              <div *ngIf="originalProductId.pending" class="loader">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+
+            <div 
+              *ngIf="!originalProductId.pending && originalProductId?.errors.notFound" 
+              class="invalid-feedback">
+              Product not found
+            </div>
           </div>
           
           <div class="form-group">
@@ -82,7 +97,7 @@
   
       <div class="form-group">
         <button 
-          
+          [disabled]="productForm.invalid" 
           class="add-btn add-btn-1"
           type="submit">Add to inventory</button>
       </div>
