--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -1,3 +1,13 @@
+@keyframes bounce {
+  0%, 60%, 100% {
+		transform: initial;
+	}
+
+	30% {
+		transform: translateY(-4px);
+	}
+}
+
 .product-form-section {
   margin-top: 3rem;
 
@@ -71,7 +81,7 @@
 
         input, textarea, select {
           width: 100%;
-          padding: 0.4rem;
+          padding: 0.4rem 0.7rem;
           font-size: 0.8rem;
           border: thin solid #f7f9fd;
           border-radius: 4px;
@@ -81,6 +91,16 @@
           &:focus {
             border-color: #F72551;
           }
+        }
+
+        input[type=number]::-webkit-inner-spin-button,
+        input[type=number]::-webkit-outer-spin-button { 
+          -webkit-appearance: none; 
+          margin: 0; 
+        }
+
+        input[type=number] {
+          -moz-appearance:textfield;
         }
 
         textarea {
@@ -102,6 +122,48 @@
         width: 100%;
         margin-bottom: 1rem;
         animation: reveal .5s ease;
+
+        .input-wrapper {
+          position: relative;
+          width: 100%;
+        }
+
+        .loader {
+          position: absolute;
+          right: 0.5rem;
+          top: 50%;
+          transform: translateY(-50%);
+          display: flex;          
+          animation: reveal .5s ease;
+          z-index: 100;
+
+          span {
+            display: block;
+            width: 6px;
+            height: 6px;
+            margin-right: 0.2rem;
+            border-radius: 20px;
+            background-color: rgba(248, 96, 129, 0.815);
+            animation: bounce 1.3s linear infinite;
+
+            &:nth-child(2) {
+              animation-delay: -1s;
+            }
+        
+            &:nth-child(3) {
+              animation-delay: -0.7s;
+            }
+          }
+        }
+
+        .invalid-feedback {
+          margin-top: 0.2rem;
+          color: red;
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: .75rem;
+          line-height: 1rem;
+          animation: reveal .5s ease;
+        }
       }
     }
 
@@ -110,7 +172,7 @@
       width: calc(100% - 400px);
       height: inherit;
       background-color: #f7f9fd;
-      user-select: none;
+      user-select: none;      
     }
   }
 }
