--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -1,21 +1,4 @@
-@mixin ease-gradient($deg) {
-  background: linear-gradient(
-    $deg,
-    hsl(347, 56%, 78%) 0%,
-    hsla(347, 56%, 78%, 0.738) 19%,
-    hsla(347, 56%, 78%, 0.541) 34%,
-    hsla(347, 56%, 78%, 0.382) 47%,
-    hsla(347, 56%, 78%, 0.278) 56.5%,
-    hsla(347, 56%, 78%, 0.194) 65%,
-    hsla(347, 56%, 78%, 0.126) 73%,
-    hsla(347, 56%, 78%, 0.075) 80.2%,
-    hsla(347, 56%, 78%, 0.042) 86.1%,
-    hsla(347, 56%, 78%, 0.021) 91%,
-    hsla(347, 56%, 78%, 0.008) 95.2%,
-    hsla(347, 56%, 78%, 0.002) 98.2%,
-    hsla(347, 56%, 78%, 0) 100%
-  );
-}
+
 
 .reloading {
   opacity: 0.3 !important;
@@ -50,137 +33,8 @@
     background-color: #fff;
     overflow: hidden;
 
-    .product-images {
+    .slider-wrapper {
       width: 50%;
-      height: auto;
-      padding: 1.5rem;
-      background-color: #fff;
-      transition: opacity .3s ease;
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        object-position: center center;
-      }
-
-      .preview-l {
-        width: 100%;
-        height: 600px;
-        overflow: hidden;
-        cursor: zoom-in;
-      }
-
-      .preview-s {
-        display: none;
-      }
-
-      .thumbnail-wrapper {        
-        position: relative;
-        width: 100%;
-        height: auto;
-        margin-top: 1.5rem;
-        border-radius: 4px;
-        overflow: hidden;
-
-        .nav-btns {
-          position: absolute;
-          top: 0;
-          padding: 0 0.5rem;
-          height: 100%;
-          transition: opacity .4s ease;
-          z-index: 1;                  
-
-          .material-icons {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 40px;
-            height: 40px;
-            color: #F72551;
-            border-radius: 40px;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            transition: background-color 0.3s ease,
-            transform 0.3s ease;
-          }
-
-          &.nav-left {
-            left: 0;
-            @include ease-gradient(90deg);
-
-            &:hover {
-              .material-icons {
-                transform: translateX(2px);
-                background-color: #f6f8ff; 
-              }
-            }
-          }
-
-          &.nav-right {
-            right: 0;
-            @include ease-gradient(-90deg);
-
-            &:hover {
-              .material-icons {
-                transform: translateX(-2px);
-                background-color: #f6f8ff; 
-              }
-            }
-          }     
-          
-          &:disabled {
-            pointer-events: none;
-            opacity: 0;
-          }
-        }
-      }
-
-      .thumbnail-list {
-        display: flex;
-        width: 100%;
-        height: auto;
-        border-radius: 4px;
-        overflow: hidden;
-        overflow-x: auto;
-        scrollbar-width: none;
-        -ms-overflow-style: none;
-        scroll-behavior: smooth;
-        scroll-snap-type: x mandatory;
-
-        &::-webkit-scrollbar {
-          display: none;
-        }
-
-        .thumbnail {          
-          flex-shrink: 0;
-          width: 130px;
-          height: 100px;        
-          padding: 0.1rem;
-          margin-right: 0.5rem;
-          border: 1px solid #e7edff;
-          border-radius: 4px;
-          scroll-snap-align: center;
-          transition: border-color 0.4s ease,
-          background-color 0.4s ease;
-          overflow: hidden;
-          
-          &.active {
-            position: relative;
-            border-color: rgba(248, 96, 129, 0.815);
-          
-            &::after {              
-              content: '';
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              background-color: rgba(255, 255, 255, 0.4);
-            }
-          }
-        }        
-      }
     }
 
     .product-information {
@@ -310,74 +164,9 @@
     .details-container {
       padding: 0;
       flex-direction: column;
-  
-      .product-images {
+
+      .slider-wrapper {
         width: 100%;
-
-        .preview-l {
-          display: none;
-        }
-
-        .preview-s {
-          display: flex;
-          width: 100%;
-          height: 350px;          
-          border-radius: 4px;
-          overflow: hidden;
-          overflow-x: auto;
-          scrollbar-width: none;
-          -ms-overflow-style: none;
-          scroll-behavior: smooth;
-          scroll-snap-type: x mandatory;
-
-          &::-webkit-scrollbar {
-            display: none;
-          }
-
-          .slide {          
-            flex-shrink: 0;
-            width: 100%;
-            height: inherit;    
-            scroll-snap-align: center;
-
-            &:not(:last-of-type) {
-              margin-right: 1.5rem;
-            }
-          }        
-        }
-
-        .indicator-wrapper {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          margin-top: 1.5rem;
-          overflow: hidden;
-
-          .indicator {
-            display: block;
-            width: 8px;
-            height: 8px;
-            border: 2px solid transparent;
-            border-radius: 15px;
-            background-color: #d4d8e4;
-            transition: background-color 0.4s ease,
-            border-color 0.4s ease;
-
-            &:not(:last-of-type) {
-              margin-right: 0.2rem;
-            }
-
-            &.active {
-              border-color: rgba(248, 96, 129, 0.815);
-              background-color: transparent;
-            }
-          }
-        }
-
-        .thumbnail-wrapper {        
-          display: none;  
-        }
       }
 
       .product-information {
