--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -8,7 +8,7 @@
       [style.visibility]="isLoading ? 'hidden' : 'visible'" 
       class="details-container">
       <div class="slider-wrapper" [class.reloading]="reolading">
-        <app-slider [product]="product"></app-slider>
+        <app-slider></app-slider>
       </div>
   
       <div class="product-information">  
