--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -52,7 +52,7 @@
             type="button" 
             class="add-to-cart-btn">
             <i class="material-icons">add_shopping_cart</i>
-            <span>Add to cart</span>
+            <span>Add To Cart</span>
           </button>
         </div>
   
